--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 
-<body>
+<body class="bg-black">
     <!-- Navigation bar****************************************************** -->
     <div class="containerfluid">
         <div class="row">
-            <div class="col-lg-12">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="col-lg-12 overflow-hidden">
+                <nav class="navbar navbar-expand-lg bg-black opacity-75 navbar-dark  padding-nav">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="#"><img src="images/globalnav_apple_image__b5er5ngrzxqq_large.svg"
                                 class="w-100"></a>
@@ -60,15 +60,15 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Support</a>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">**magnifier**</a>
+                                    <a class="nav-link" href="#"><img
+                                            src="images/globalnav_search_image__cbllq1gkias2_large.svg"
+                                            class="w-100"></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">shopping basket</a>
+                                    <a class="nav-link" href="#"><img
+                                            src="images/globalnav_bag_image__yzte50i47ciu_large.svg" class="w-100"></a>
                                 </li>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link disabled">Disabled</a>
-                                </li>
+
                             </ul>
                         </div>
                     </div>
@@ -76,7 +76,87 @@
             </div>
         </div>
     </div>
-    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    <!-- +++++++++++++++++++++++++++++iphone14pro+++++++++++++++++++++++++++++ -->
+    <div class="container-fluid text-white text-center overflow-hidden">
+        <div class="row">
+            <div class="col-lg-12 ">
+                <p class="w-100 text-center text-white fs-1 fw-bold position-relative z-1">iPhone 14 Pro</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 ">
+                <h3 class="w-100 position-relative z-1">Pro.Byound.</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 ">
+                <p class="w-100 fs-4 position-absolute z-1"><a class=" txt-deco a-line" href="#">Learn
+                        more></a>&nbsp;&nbsp;<a class=" txt-deco a-line" href="#">Buy>
+                    </a></p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <img src="images/hero_iphone14pro__e5xbgo5ffhg2_large_2x.jpg" class="w-100 overflow-hidden img-si ">
+            </div>
+        </div>
+    </div>
+    <!-- 00000000000000000000000000000000000000000000000000000000000000000000000000 -->
+
+    <div class="container-fluid bg-white text-black text-center">
+        <div class="row">
+            <div class="col-lg-12 ">
+                <p class="w-100 text-center  fs-1 fw-bold position-relative z-1">iPhone 14</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 ">
+                <h3 class="w-100 position-relative z-1">Big and bigger</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 ">
+                <p class="w-100 fs-4 position-absolute z-1"><a class=" txt-deco a-line" href="#">Learn
+                        more></a>&nbsp;&nbsp;<a class=" txt-deco a-line" href="#">Buy>
+                    </a></p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <img src="images/hero_iphone14__fjmsqstr1ceq_large_2x.jpg" class="w-100 overflow-hidden img-si ">
+            </div>
+        </div>
+    </div>
+    <!-- ---------------------------------------------------------------------- -->
+    <div class="container-fluid text-white text-center overflow-hidden">
+        <div class="row">
+            <div class="col-lg-12 ">
+                <img src="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 ">
+                <h3 class="w-100 position-relative z-1">A healthy leap ahead.</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 ">
+                <p class="w-100 fs-4 position-absolute z-1"><a class=" txt-deco a-line" href="#">Learn
+                        more></a>&nbsp;&nbsp;<a class=" txt-deco a-line" href="#">Buy>
+                    </a></p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <img src="images/hero_apple_watch_series_8__bjc1ok5mkjua_large_2x.jpg"
+                    class="w-100 overflow-hidden img-si ">
+            </div>
+        </div>
+    </div>
+
+
+
+
 </body>
 
 </html>
