--- a/index.html
+++ b/index.html
@@ -5,156 +5,281 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apple.com-Web2-Final-Project</title>
+    <title>Apple-practice-sheet</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body class="bg-black">
-    <!-- Navigation bar****************************************************** -->
-    <div class="containerfluid">
-        <div class="row">
-            <div class="col-lg-12 overflow-hidden">
-                <nav class="navbar navbar-expand-lg bg-black opacity-75 navbar-dark  padding-nav">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#"><img src="images/globalnav_apple_image__b5er5ngrzxqq_large.svg"
-                                class="w-100"></a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Store</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Mac</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">iPad</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">iPhone</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Watch</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">AirPods</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">TV & Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Only on Apple</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Accessories</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Support</a>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#"><img
-                                            src="images/globalnav_search_image__cbllq1gkias2_large.svg"
-                                            class="w-100"></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#"><img
-                                            src="images/globalnav_bag_image__yzte50i47ciu_large.svg" class="w-100"></a>
-                                </li>
+    <nav class="navbar navbar-expand-lg bg-black opacity-75 position-sticky top-0 padding0 ">
+        <div class="container-fluid d-flex justify-content-center ">
+            <a class="navbar-brand" href="#">apple</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse bg-black opacity-75 position-sticky top-0 navbar-dark d-flex justify-content-center"
+                id="navbarNav1">
+                <ul class="navbar-nav fs1">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Store</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Mac</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">iPad</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">iPhone</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Watch</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">AirPods</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">TV & Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Only on Apple</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Accessories</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Support</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="material-symbols-outlined icon-placement">
+                                search
+                            </span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="material-symbols-outlined icon-placement">
+                                shopping_bag
+                            </span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-                            </ul>
-                        </div>
+    <!-- -----------------------------------------Box 1 heading button titles -->
+
+    <div class="container-fluid d-flex justify-content-center">
+        <div class="row">
+            <div class="col-lg-12 d-flex justify-content-center align-items-end dv1">
+                <h2 class="fonts1">&nbsp; Introducing the <br>all-new HomePod.</h2>
+
+            </div>
+            <div class="row">
+                <div class="col d-flex justify-content-center box1-button">
+                    <button type="button"
+                        class="btn border border-3 border-white rounded-pill btn-lg d-flex align-items-centers"
+                        id="button1">Watch the film<span class="material-symbols-outlined fs-5 p-1">
+                            play_circle
+                        </span>
+                    </button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col d-flex justify-content-center box1-part3">
+                    <p>Available starting 2.3</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 d-flex justify-content-center ">
+                    <a href="#" class="bluelink">Learn more <span class="material-symbols-outlined icon-placement">
+                            navigate_next
+                        </span></a>
+                    <a href="#" class="bluelink">Order Now <span class="material-symbols-outlined icon-placement">
+                            navigate_next
+                        </span></a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- -------------------------------------------bg photo -->
+    <div class="container-fluid bg-box2">
+        <div class="row">
+            <div class="col-lg-12"></div>
+        </div>
+    </div>
+    <!-- -------------------------------------------white line devider -->
+
+    <div class="container-fluid bg-white custom-devider">
+        <div class="row">
+            <div class="col-lg-12"></div>
+        </div>
+    </div>
+
+    <!-- -----------------------------------------Box 2 heading titles -->
+
+    <div class="container-fluid d-flex justify-content-center">
+        <div class="row">
+            <div class="col-lg-12 d-flex justify-content-center align-items-end dv2">
+                <h2 class="fonts1">Mac mini</h2><br>
+
+            </div>
+            <div class="row">
+                <div class="col d-flex justify-content-center box2-h4">
+                    <h4>Supercharged by M2 and M2 Pro.</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col d-flex justify-content-center box1-part3">
+                    <p>Available starting 1.24</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 d-flex justify-content-center ">
+                    <a href="#" class="bluelink">Learn more <span class="material-symbols-outlined icon-placement">
+                            navigate_next
+                        </span></a>
+                    <a href="#" class="bluelink">Order Now <span class="material-symbols-outlined icon-placement">
+                            navigate_next
+                        </span></a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- -------------------------------------------bg photo -->
+    <div class="container-fluid bg-box3">
+        <div class="row">
+            <div class="col-lg-12"></div>
+        </div>
+    </div>
+    <!-- -------------------------------------------white line devider -->
+
+    <div class="container-fluid bg-white custom-devider">
+        <div class="row">
+            <div class="col-lg-12"></div>
+        </div>
+    </div>
+    <!-- ------------------------------------------- -->
+
+    <!-- -----------------------------------------Box 3 heading titles -->
+
+    <div class="container-fluid d-flex justify-content-center">
+        <div class="row">
+            <div class="col-lg-12 d-flex justify-content-center align-items-end dv2">
+                <h2 class="fonts1">MacBook Pro</h2><br>
+
+            </div>
+            <div class="row">
+                <div class="col d-flex justify-content-center box2-h4">
+                    <h4>Supercharged by M2 Pro and M2 Max.</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col d-flex justify-content-center box1-part3">
+                    <p>Available starting 1.24</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 d-flex justify-content-center ">
+                    <a href="#" class="bluelink">Learn more <span class="material-symbols-outlined icon-placement">
+                            navigate_next
+                        </span></a>
+                    <a href="#" class="bluelink">Order Now <span class="material-symbols-outlined icon-placement">
+                            navigate_next
+                        </span></a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- -------------------------------------------bg photo -->
+    <div class="container-fluid bg-box4">
+        <div class="row">
+            <div class="col-lg-12"></div>
+        </div>
+    </div>
+    <!-- -------------------------------------------white line devider -->
+
+    <div class="container-fluid bg-white custom-devider">
+        <div class="row">
+            <div class="col-lg-12"></div>
+        </div>
+    </div>
+    <!-- -------------------------------------------Box5 & Box6 -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6 bg-box5">
+                <div class="row">
+                    <div class="col-8 offset-2 d-flex justify-content-center text-white fs-1 align-items-end dv2d">
+                        <h4 class="heading-property lh-1">Creativity and community. <br> Woven together.</h4>
                     </div>
-                </nav>
+                </div>
+                <div class="row">
+                    <div class="col-6 offset-3 d-flex justify-content-center">
+                        <h5 class="text-white text-center">Explore the new Black Unity watch band and matching
+                            face.</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <a href="#" class="bluelink">Learn more <span class="material-symbols-outlined icon-placement">
+                                navigate_next
+                            </span></a>
+                        <a href="#" class="bluelink">Buy <span class="material-symbols-outlined icon-placement">
+                                navigate_next
+                            </span></a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <!-- +++++++++++++++++++++++++++++iphone14pro+++++++++++++++++++++++++++++ -->
-    <div class="container-fluid text-white text-center overflow-hidden">
-        <div class="row">
-            <div class="col-lg-12 ">
-                <p class="w-100 text-center text-white fs-1 fw-bold position-relative z-1">iPhone 14 Pro</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12 ">
-                <h3 class="w-100 position-relative z-1">Pro.Byound.</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12 ">
-                <p class="w-100 fs-4 position-absolute z-1"><a class=" txt-deco a-line" href="#">Learn
-                        more></a>&nbsp;&nbsp;<a class=" txt-deco a-line" href="#">Buy>
-                    </a></p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <img src="images/hero_iphone14pro__e5xbgo5ffhg2_large_2x.jpg" class="w-100 overflow-hidden img-si ">
-            </div>
-        </div>
-    </div>
-    <!-- 00000000000000000000000000000000000000000000000000000000000000000000000000 -->
-
-    <div class="container-fluid bg-white text-black text-center">
-        <div class="row">
-            <div class="col-lg-12 ">
-                <p class="w-100 text-center  fs-1 fw-bold position-relative z-1">iPhone 14</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12 ">
-                <h3 class="w-100 position-relative z-1">Big and bigger</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12 ">
-                <p class="w-100 fs-4 position-absolute z-1"><a class=" txt-deco a-line" href="#">Learn
-                        more></a>&nbsp;&nbsp;<a class=" txt-deco a-line" href="#">Buy>
-                    </a></p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <img src="images/hero_iphone14__fjmsqstr1ceq_large_2x.jpg" class="w-100 overflow-hidden img-si ">
-            </div>
-        </div>
-    </div>
-    <!-- ---------------------------------------------------------------------- -->
-    <div class="container-fluid text-white text-center overflow-hidden">
-        <div class="row">
-            <div class="col-lg-12 ">
-                <img src="">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12 ">
-                <h3 class="w-100 position-relative z-1">A healthy leap ahead.</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12 ">
-                <p class="w-100 fs-4 position-absolute z-1"><a class=" txt-deco a-line" href="#">Learn
-                        more></a>&nbsp;&nbsp;<a class=" txt-deco a-line" href="#">Buy>
-                    </a></p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <img src="images/hero_apple_watch_series_8__bjc1ok5mkjua_large_2x.jpg"
-                    class="w-100 overflow-hidden img-si ">
+            <div class="col-lg-6 bg-box6">
+                <div class="row">
+                    <div class="col-8 offset-2 d-flex justify-content-center text-white fs-1 align-items-end dv2d">
+                        <img src="images/promo_logo_apple_watch_series_8__ee6riplsucuq_large_2x.png" class="img-logo-s">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 offset-3 d-flex justify-content-center">
+                        <h5 class="text-white text-center">A healthy leap ahead.</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <a href="#" class="bluelink">Learn more <span class="material-symbols-outlined icon-placement">
+                                navigate_next
+                            </span></a>
+                        <a href="#" class="bluelink">Buy <span class="material-symbols-outlined icon-placement">
+                                navigate_next
+                            </span></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
+    <!-- -------------------------------------------white line devider -->
 
+    <div class="container-fluid bg-white custom-devider">
+        <div class="row">
+            <div class="col-lg-12"></div>
+        </div>
+    </div>
+
+    <!-- -------------------------------------------Box7 & Box8 -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6"></div>
+            <div class="col-lg-6"></div>
+        </div>
+    </div>
 
 
 </body>
