--- a/index.html
+++ b/index.html
@@ -276,8 +276,189 @@
     <!-- -------------------------------------------Box7 & Box8 -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-6"></div>
-            <div class="col-lg-6"></div>
+            <div class="col-lg-6 bg-box7">
+                <div class="row">
+                    <div class="col-8 offset-2 d-flex justify-content-center text-white fs-1 align-items-end dv2d">
+                        <h4 class="heading-property lh-1">iPhone 14 Pro</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 offset-3 d-flex justify-content-center">
+                        <h5 class="text-white text-center">Pro. Beyond.</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <a href="#" class="bluelink">Learn more <span class="material-symbols-outlined icon-placement">
+                                navigate_next
+                            </span></a>
+                        <a href="#" class="bluelink">Buy <span class="material-symbols-outlined icon-placement">
+                                navigate_next
+                            </span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 bg-box8">
+                <div class="row">
+                    <div class="col-8 offset-2 d-flex justify-content-center text-black fs-1 align-items-end dv2d">
+                        <h4 class="heading-property lh-1">iPhone 14</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 offset-3 d-flex justify-content-center">
+                        <h5 class="text-black text-center">Big and bigger.</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <a href="#" class="bluelink">Learn more <span class="material-symbols-outlined icon-placement">
+                                navigate_next
+                            </span></a>
+                        <a href="#" class="bluelink">Buy <span class="material-symbols-outlined icon-placement">
+                                navigate_next
+                            </span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- -------------------------------------------white line devider -->
+
+    <div class="container-fluid bg-white custom-devider">
+        <div class="row">
+            <div class="col-lg-12"></div>
+        </div>
+    </div>
+    <!-- --------------------------------------------Box9 & Box10 -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6 bg-box9">
+                <div class="row">
+                    <div class="col-8 offset-2 d-flex justify-content-center text-white fs-1 align-items-end dv2d">
+                        <h4 class="heading-property lh-1">A gift for every wish.</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 offset-3 d-flex justify-content-center">
+                        <h5 class="text-white text-center">Find something for everyone this Lunar New Year.</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center link-line">
+                        <a href="#" class="text-white" id="red-a">Shop the gift guide <span
+                                class="material-symbols-outlined icon-placement">
+                                navigate_next
+                            </span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 bg-box10">
+                <div class="row">
+                    <div class="col-8 offset-2 d-flex justify-content-center text-black fs-1 align-items-end dv2d">
+                        <img src="images/logo__dcojfwkzna2q_large_2x.png" class="img-logo-s1">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 offset-3 d-flex justify-content-center">
+                        <h5 class="text-black text-center letter-s">Get up to 3% Daily Cash back with every purchase.
+                        </h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <a href="#" class="bluelink">Learn more <span class="material-symbols-outlined icon-placement">
+                                navigate_next
+                            </span></a>
+                        <a href="#" class="bluelink">Apply now <span class="material-symbols-outlined icon-placement">
+                                navigate_next
+                            </span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- -------------------------------------------white line devider -->
+
+    <div class="container-fluid bg-white custom-devider">
+        <div class="row">
+            <div class="col-lg-12"></div>
+        </div>
+    </div>
+    <!-- ------------------------------------------------------Carousel -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                            aria-label="Slide 5"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                            aria-label="Slide 6"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+                            aria-label="Slide 7"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"
+                            aria-label="Slide 8"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"
+                            aria-label="Slide 9"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"
+                            aria-label="Slide 10"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active carousel1-bg">
+                            <img src="images/carousel1-1960x1102.jpg" class="d-block w-100 position-relative ">
+                            <!-- <button type="button"
+                                class="btn btn-light rounded-pill btn-sm position-relative z-0 custom-button">Stream
+                                now</button> -->
+                            <!--  -->
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carousel2-1960x1102.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carousel3-1960x1102.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carousel4-1960x1102.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carousel5-1960x1102.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carousel6-1960x1102.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carousel7-1960x1102.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carousel8-1960x1102.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carousel9-1960x1102.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/carousel10-1960x1102.jpg" class="d-block w-100">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 
