--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
     </div>
     <!-- ------------------------------------------------------Carousel -->
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
+        <div class="row bg-white">
+            <div class="col-8 offset-2">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -458,6 +458,21 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
+            </div>
+        </div>
+    </div>
+    <!-- -------------------------------------------white line devider -->
+
+    <div class="container-fluid bg-white custom-devider">
+        <div class="row">
+            <div class="col-lg-12"></div>
+        </div>
+    </div>
+    <!-- -------------------------------------------------- -->
+    <div class="container-fluid bg-secondary text-black">
+        <div class="row">
+            <div class="col-12">
+                
             </div>
         </div>
     </div>
