footer top level update

--- a/index.html
+++ b/index.html
@@ -19,18 +19,23 @@
 </head>
 
 <body class="bg-black">
-    <nav class="navbar navbar-expand-lg bg-black opacity-75 position-sticky top-0 padding0 ">
+    <nav
+        class="navbar navbar-expand-lg navbar-dark bg-black bg-opacity-75  text-opacity-100 position-sticky top-0 padding0 ">
         <div class="container-fluid d-flex justify-content-center ">
-            <a class="navbar-brand" href="#">apple</a>
+            <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse bg-black opacity-75 position-sticky top-0 navbar-dark d-flex justify-content-center"
+            <div class="collapse navbar-collapse navbar-dark bg-black bg-opacity-50 text-opacity-100 position-sticky top-0  d-flex justify-content-center"
                 id="navbarNav1">
                 <ul class="navbar-nav fs1">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Store</a>
+                        <a class="nav-link" aria-current="page" href="#"><img src="images/apple.svg"
+                                class="w-100 bg-light"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Store</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Mac</a>
@@ -385,9 +390,9 @@
         </div>
     </div>
     <!-- ------------------------------------------------------Carousel -->
-    <div class="container-fluid">
-        <div class="row bg-white">
-            <div class="col-8 offset-2">
+    <div class="container">
+        <div class="row">
+            <div class="col-10 offset-1">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -412,7 +417,7 @@
                             aria-label="Slide 10"></button>
                     </div>
                     <div class="carousel-inner">
-                        <div class="carousel-item active carousel1-bg">
+                        <div class="carousel-item active carousel1-bg" data-bs-interval="3500">
                             <img src="images/carousel1-1960x1102.jpg" class="d-block w-100 position-relative ">
                             <!-- <button type="button"
                                 class="btn btn-light rounded-pill btn-sm position-relative z-0 custom-button">Stream
@@ -468,15 +473,42 @@
             <div class="col-lg-12"></div>
         </div>
     </div>
-    <!-- -------------------------------------------------- -->
-    <div class="container-fluid bg-secondary text-black">
+    <!-- --------------------------------------------------footer -->
+
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-12">
-                
+            <div class="col-md-12 custom bg-body-secondary footer-height">
+                <div class="row">
+                    <div
+                        class="col-12 col-xl-10 offset-xl-1 border-bottom border-opacity-25 border-1 border-secondary ">
+                        <ul class="ul-prop1 ">
+                            <li class="padding0 li-margint">To access and use all the features of Apple Card, you must
+                                add
+                                Apple Card to Wallet on
+                                an iPhone or iPad with the latest version of iOS or iPadOS. Update to the latest version
+                                by going to Settings > General > Software Update. Tap Download and Install.</li>
+                            <li class="padding0 li-margint">Available for qualifying applicants in the United States.
+                            </li>
+                            <li class="padding0 li-margint">Apple Card is issued by Goldman Sachs Bank USA,
+                                Salt Lake City Branch.
+                            </li>
+                            <li class="padding0 li-margint">Learn more about how Apple Card applications are evaluated
+                                at <a href="https://support.apple.com/kb/HT209218">support.apple.com/kb/HT209218</a>.
+                            </li>
+                            <li class="padding0 li-margint"><span class="d-none d-xl-inline">Major League Baseball
+                                    trademarks and
+                                    copyrights are
+                                    used with permission of MLB Advanced Media, L.P. All rights reserved.</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row"></div>
+                <div class="row"></div>
+
+
             </div>
         </div>
     </div>
-
 
 </body>
 
