last 3 divs of the footer

--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                                 at <a href="https://support.apple.com/kb/HT209218">support.apple.com/kb/HT209218</a>
                             </li>
 
-                            <li class="padding0 li-margint"><span class="d-none d-xl-inline">Major League Baseball
+                            <li class="padding0 li-margint"><span class="d-none d-lg-inline">Major League Baseball
                                     trademarks and
                                     copyrights are
                                     used with permission of MLB Advanced Media, L.P. All rights reserved.</span>
@@ -688,7 +688,52 @@
                     </div>
 
                 </div>
-                <div class="row"></div>
+                <div class="row">
+                    <div class="col-12 bg-white bg-opacity-25 ">
+                        <div class="row">
+                            <div class="col-12 listcustomB3">
+
+                                More ways to shop:
+                                <a href="#">Find an Apple Store</a>
+                                or <a href="#">other retailer</a> near you.
+                                <span>Or call 1-800-MY-APPLE.</span>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+
+                            <div class="col-10 listcustomB2">Copyright ©
+                                2023<span>
+                                    Apple Inc. All rights reserved.
+                                </span>
+                            </div>
+                            <div class="col-2 listcustomB2 liHover"><a href="#"> United States</a></div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-12 pt-2">
+                                <ul class="d-flex ps-0 listcustomB2">
+                                    <li class="border-end border-1 border-secondary lh-sm px-3 liHover"><a
+                                            href="#">Privacy
+                                            Policy</a></li>
+                                    <li class="border-end border-1 border-secondary lh-sm px-3 liHover"><a
+                                            href="#">Terms of
+                                            Use</a>
+                                    </li>
+                                    <li class="border-end border-1 border-secondary lh-sm px-3 liHover"><a
+                                            href="#">Sales and
+                                            Refunds</a> </li>
+                                    <li class="border-end border-1 border-secondary lh-sm px-3 liHover"><a
+                                            href="#">Legal</a>
+                                    </li>
+                                    <li class="border-end border-1 border-secondary lh-sm px-3 liHover"><a href="#">Site
+                                            Map</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
 
             </div>
