collapse footer is done!

--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                     </div>
                 </div>
                 <hr>
-                <div class="row">
+                <div class="row d-none d-md-flex">
                     <div class="col-2">
                         <ul class="listcustomB2">
                             <li class="fw-bold mt-md-2">Shop and Learn</li>
@@ -662,7 +662,6 @@
                         </ul>
                         <ul class="listcustomB2">
                             <li><span class="fw-bold mt-2">Entertainment</span></li>
-
                             <li><a href="#">Apple One</a></li>
                             <li><a href="#">Apple TV+</a></li>
                             <li><a href="#">Apple Music</a></li>
@@ -739,6 +738,257 @@
                     </div>
 
                 </div>
+                <!-- collapse footer -->
+                <div class="container-fluid d-md-none">
+                    <div class="row">
+                        <div class="col-12">
+
+                            <div class="accordion" id="accordionPanelsStayOpenExample">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                                        <button class="accordion-button collapsed customFs" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
+                                            aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
+                                            Shop and Learn
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                                        aria-labelledby="panelsStayOpen-headingOne">
+                                        <div class="accordion-body">
+                                            <ul class="listcustomB2">
+                                                <li><a href="#">Store</a></li>
+                                                <li><a href="#">Mac</a></li>
+                                                <li><a href="#">iPad</a></li>
+                                                <li><a href="#">iPhone</a></li>
+                                                <li><a href="#">Watch</a></li>
+                                                <li><a href="#">AirPods</a></li>
+                                                <li><a href="#">TV & Home</a></li>
+                                                <li><a href="#">AirTag</a></li>
+                                                <li><a href="#">Accessories</a></li>
+                                                <li><a href="#">Gift Cards</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                                        <button class="accordion-button collapsed customFs" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo"
+                                            aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                                            Apple Wallet
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                                        aria-labelledby="panelsStayOpen-headingTwo">
+                                        <div class="accordion-body">
+                                            <ul class="listcustomB2">
+                                                <li><a href="#">Wallet</a></li>
+                                                <li><a href="#">Apple Card</a></li>
+                                                <li><a href="#">Apple Pay</a></li>
+                                                <li><a href="#">Apple Cash</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                                        <button class="accordion-button collapsed customFs" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
+                                            aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                                            Account
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                                        aria-labelledby="panelsStayOpen-headingThree">
+                                        <div class="accordion-body">
+                                            <ul class="listcustomB2">
+                                                <li><a href="#">Manage Your Apple ID</a></li>
+                                                <li><a href="#">Apple Store Account</a></li>
+                                                <li><a href="#">iCloud.com</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+                                        <button class="accordion-button collapsed customFs" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour"
+                                            aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+                                            Entertainment
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+                                        aria-labelledby="panelsStayOpen-headingFour">
+                                        <div class="accordion-body">
+                                            <ul class="listcustomB2">
+                                                <li><a href="#">Apple One</a></li>
+                                                <li><a href="#">Apple TV+</a></li>
+                                                <li><a href="#">Apple Music</a></li>
+                                                <li><a href="#">Apple Arcade</a></li>
+                                                <li><a href="#">Apple Fitness+</a></li>
+                                                <li><a href="#">Apple News+</a></li>
+                                                <li><a href="#">Apple Podcast</a></li>
+                                                <li><a href="#">Apple Books</a></li>
+                                                <li><a href="#">App Store</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-headingFive">
+                                        <button class="accordion-button collapsed customFs" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive"
+                                            aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
+                                            Apple Store
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse"
+                                        aria-labelledby="panelsStayOpen-headingFive">
+                                        <div class="accordion-body">
+                                            <ul class="listcustomB2">
+                                                <li><a href="#">Find a Store</a></li>
+                                                <li><a href="#">Genius Bar</a></li>
+                                                <li><a href="#">Today at Apple</a></li>
+                                                <li><a href="#">Apple Camp</a></li>
+                                                <li><a href="#">Apple Store App</a></li>
+                                                <li><a href="#">Refurbished and Clearance</a></li>
+                                                <li><a href="#">Financing</a></li>
+                                                <li><a href="#">Apple Trade In</a></li>
+                                                <li><a href="#">Order Status</a></li>
+                                                <li><a href="#">Shopping Help</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-headingSix">
+                                        <button class="accordion-button collapsed customFs" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix"
+                                            aria-expanded="false" aria-controls="panelsStayOpen-collapseSix">
+                                            For Business
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse"
+                                        aria-labelledby="panelsStayOpen-headingSix">
+                                        <div class="accordion-body">
+                                            <ul class="listcustomB2">
+
+                                                <li><a href="#">Apple and Business</a></li>
+                                                <li><a href="#">Shop for Business</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-headingSeven">
+                                        <button class="accordion-button collapsed customFs" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSeven"
+                                            aria-expanded="false" aria-controls="panelsStayOpen-collapseSeven">
+                                            For Education
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapseSeven" class="accordion-collapse collapse"
+                                        aria-labelledby="panelsStayOpen-headingSeven">
+                                        <div class="accordion-body">
+                                            <ul class="listcustomB2">
+
+                                                <li><a href="#">Apple and Education</a></li>
+                                                <li><a href="#">Shop for K-12</a></li>
+                                                <li><a href="#">Shop for College</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-headingEight">
+                                        <button class="accordion-button collapsed customFs" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseEight"
+                                            aria-expanded="false" aria-controls="panelsStayOpen-collapseEight">
+                                            For Healthcare
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapseEight" class="accordion-collapse collapse"
+                                        aria-labelledby="panelsStayOpen-headingEight">
+                                        <div class="accordion-body">
+                                            <ul class="listcustomB2">
+                                                <li><a href="#">Apple in Healthcare</a></li>
+                                                <li><a href="#">Health and Apple Watch</a></li>
+                                                <li><a href="#">Health Records on iPhone</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-headingNine">
+                                        <button class="accordion-button collapsed customFs" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseNine"
+                                            aria-expanded="false" aria-controls="panelsStayOpen-collapseNine">
+                                            For Government
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapseNine" class="accordion-collapse collapse"
+                                        aria-labelledby="panelsStayOpen-headingNine">
+                                        <div class="accordion-body">
+                                            <ul class="listcustomB2">
+                                                <li><a href="#">Shop for Government</a></li>
+                                                <li><a href="#">Shop for Veterans and Military</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-headingTen">
+                                        <button class="accordion-button collapsed customFs" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTen"
+                                            aria-expanded="false" aria-controls="panelsStayOpen-collapseTen">
+                                            Apple Values
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapseTen" class="accordion-collapse collapse"
+                                        aria-labelledby="panelsStayOpen-headingTen">
+                                        <div class="accordion-body">
+                                            <ul class="listcustomB2">
+                                                <li><a href="#">Accessibility</a></li>
+                                                <li><a href="#">Education</a></li>
+                                                <li><a href="#">Environment</a></li>
+                                                <li><a href="#">Inclusion and Diversity</a></li>
+                                                <li><a href="#">Privacy</a></li>
+                                                <li><a href="#">Racial Equity and Justice</a></li>
+                                                <li><a href="#">Supplier Responsibility</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-headingEleven">
+                                        <button class="accordion-button collapsed customFs" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseEleven"
+                                            aria-expanded="false" aria-controls="panelsStayOpen-collapseEleven">
+                                            About Apple
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapseEleven" class="accordion-collapse collapse"
+                                        aria-labelledby="panelsStayOpen-headingEleven">
+                                        <div class="accordion-body">
+                                            <ul class="listcustomB2">
+                                                <li><a href="#">Newsroom</a></li>
+                                                <li><a href="#">Apple Leadership</a></li>
+                                                <li><a href="#">Career Opportunities</a></li>
+                                                <li><a href="#">Investors</a></li>
+                                                <li><a href="#">Ethics & Compliance</a></li>
+                                                <li><a href="#">Events</a></li>
+                                                <li><a href="#">Contact Apple</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- end of collapse footer -->
                 <div class="row">
                     <div class="col-12 bg-white bg-opacity-25 ">
                         <div class="row">
@@ -787,10 +1037,7 @@
                 </div>
 
 
-            </div>
-        </div>
-    </div>
-    <!-- ---------------------------------------------------------footer -->
+                <!-- ---------------------------------------------------------footer -->
 
 </body>
 
